--- a/markuphtml.html
+++ b/markuphtml.html
@@ -1,11 +1,20 @@
-<h1>I. What It's All About</h1>
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Book Chapter</title>
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>    
+<h1 class="topfont">I. What It's All About</h1>
 
 <p>Whence come the thousands of photographs used every month by newspapers and magazines?
 
 More than that, whence do the photographs come which are used by makers of calendars, postcards, for advertisements, and for illustrating books, stories and articles?
 </p>
 ---------------------------------
-<blockquote>
+<blockquote id="makeitbold">
 <p>This little book is a practical, up-to-the-minute answer to the question: "How can I make my camera-work profitable?"
 
 A. H. Beardsley, 
@@ -13,7 +22,7 @@ Publisher, Photo-Era Magazine.</p>
 </blockquote>
 ----------------------------------
 
-<p>At first thought, the answer is, "From professional photographers and publisher-photo-services." But professional photographers do not produce one-third of the photographs used, and publisher-photo-services are supplied by that same large number of camerists that supply publications with most of their prints.
+<p class="one">At first thought, the answer is, "From professional photographers and publisher-photo-services." But professional photographers do not produce one-third of the photographs used, and publisher-photo-services are supplied by that same large number of camerists that supply publications with most of their prints.
 
 No one can deny that the greatest number of prints published are bought from amateur photographers in towns no larger than the average, and sometimes smaller.
 
@@ -21,7 +30,7 @@ The camerist does not have to get in an air-ship and fly to Africa in order to p
 
 "The photographer is apt to think that all his ambitions would be realised if only he could journey to foreign shores or to distant corners of our country; or if he could attend the spectacular events that focus the attention of the world now and then. <em>This is a delusion. The real triumph is that of the photographer who utilises the material ready at hand in his own district, be it large or small.</em>"</p>
 
-<p>And more, a person does not have to be an expert photographer in order to succeed at the work. Here is what one prominent writer says about it:
+<p class="two">And more, a person does not have to be an expert photographer in order to succeed at the work. Here is what one prominent writer says about it:
 
 "The requirements of the field are well within the capabilities of even the beginner in photography, viz.; the ability to make good negatives and good prints, the ability to recognise news-value, and a methodical plan to find the market where the prints will find acceptance. The man or woman who can meet these requirements should be fairly successful from the beginning, and will open up quickly new avenues of special work and profit."
 
@@ -33,7 +42,7 @@ The field—how wide is it? Get out your map of the world. The field for <em>mak
 
 The markets may be classified briefly:
 
-<ol>
+<ol class="markets">
 <li>Newspapers</li>
 <li>Magazines</li>
 <li>Postcard-makers</li>
@@ -57,4 +66,4 @@ However, I do not mean that the instances of $200 or so for prints should be tak
 Success at selling press-photographs does not depend on the size of the town you live in, the cost or manufacture of your apparatus, or on your literary ability. It depends on you and your worship of the homaged gods of success if you would sell photographs. The gift of these gods is the ability to make good.</p>
 
 --------------------------------------
-<cite>An excerpt from the book, "Making Your Camera Pay," by Frederick C. Davis. Copyright 1922, Robert M. McBride & Company, New York. Full book available online at </cite><a href="https://www.gutenberg.org/files/35709/35709-h/35709-h.htm">Project Gutenberg </a>
+<cite class="one">An excerpt from the book, "Making Your Camera Pay," by Frederick C. Davis. Copyright 1922, Robert M. McBride & Company, New York. Full book available online at <a href="https://www.gutenberg.org/files/35709/35709-h/35709-h.htm">Project Gutenberg </a></cite>
